--- a/hello-world2/hello-world/package.json
+++ b/hello-world2/hello-world/package.json
@@ -7,7 +7,13 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1"
+    "aws-sdk": "^2.594.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.19.1",
+    "env-var": "^4.1.0",
+    "express": "^4.17.1",
+    "serverless-http": "^2.3.0",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "test": "mocha tests/unit/"
